Fix app container and scroll bar layout issue by setting max witdh to 100% in #root and adjusting app container size

--- a/src/index.css
+++ b/src/index.css
@@ -68,22 +68,25 @@ body {
   width: 100vw;
   display: flex;
   flex-direction: column;
+  
 }
 
 
 
 #root {
-  height: 100%; /* Make #root take up the full height of the viewport */
-  display: flex;
-  flex-direction: column;
-   width: 100%;
+  height: 100vh; /* Full viewport height */
+  width: 100%; /* Full viewport width */
+  margin: 0 auto;
+  padding: 0; /* Remove padding */
 }
+
 
 .app-container {
   /* Make the App container cover the full screen */
   height: 100%;
   width: 100%;
   display: flex;
+  min-height: 100vh;
   flex-direction: column;
    max-width: 100%; /* Add this line */
   box-sizing: border-box; /* Add this line */
@@ -93,7 +96,8 @@ body {
   /* Make the main section flexible and take up the available space */
   flex: 1;
   overflow-y: auto;
-  padding: 60px 0;
+  padding: 60px 20px;
+  
 
 max-width: 100%;
 box-sizing: border-box;
